--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@radix-ui/react-alert-dialog": "1.1.6",
     "@radix-ui/react-dialog": "1.1.6",
     "@radix-ui/react-label": "2.1.2",
+    "@radix-ui/react-popover": "1.1.6",
+    "@radix-ui/react-separator": "1.1.2",
     "@radix-ui/react-slot": "1.1.2",
     "@radix-ui/react-switch": "1.1.3",
     "@radix-ui/react-tabs": "1.1.3",
@@ -27,6 +29,7 @@
     "@react-pdf/renderer": "4.2.1",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "cmdk": "1.0.0",
     "dayjs": "1.11.13",
     "file-saver": "2.0.5",
     "jszip": "3.10.1",
@@ -34,6 +37,7 @@
     "lz-string": "1.5.0",
     "n2words": "1.21.0",
     "next": "14.2.15",
+    "next-axiom": "1.9.1",
     "nuqs": "2.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
