feat: Integrate Sentry for comprehensive error monitoring and tracking
- Add Sentry configuration for client, server, and edge runtime environments
- Configure error tracking with sampling rates and performance monitoring
- Implement global error handling with Sentry exception capturing
- Add instrumentation for Next.js runtime error tracking
- Update Next.js configuration to support Sentry integration
- Add Sentry-related dependencies to package.json

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-tooltip": "1.1.8",
     "@react-pdf/layout": "4.2.2",
     "@react-pdf/renderer": "4.2.1",
+    "@sentry/nextjs": "9.3.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "cmdk": "1.0.0",
