--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-pdf/layout": "4.2.2",
     "@react-pdf/renderer": "4.2.1",
     "@sentry/nextjs": "9.3.0",
+    "@vercel/speed-insights": "1.2.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "cmdk": "1.0.0",
