--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "type-check": "tsc --noEmit",
     "prettify": "prettier --write --cache '**/*.{ts?(x),json,js,mjs,yml,yaml,md}'",
     "update-deps": "pnpm upgrade --interactive --latest",
-    "dedupe": "pnpm dedupe"
+    "dedupe": "pnpm dedupe",
+    "e2e": "pnpm exec playwright test",
+    "e2e:ui": "pnpm exec playwright test --ui"
   },
   "dependencies": {
     "@hookform/resolvers": "3.9.0",
@@ -53,6 +55,7 @@
     "zod": "3.24.2"
   },
   "devDependencies": {
+    "@playwright/test": "1.51.0",
     "@types/file-saver": "2.0.7",
     "@types/node": "22.8.1",
     "@types/react": "18.3.12",
