--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,11 @@
   "extends": ["next/core-web-vitals", "next/typescript"],
   "rules": {
     "no-console": ["warn", { "allow": ["error"] }]
-  }
+  },
+  "overrides": [
+    {
+      "files": "e2e/**",
+      "extends": "plugin:playwright/recommended"
+    }
+  ]
 }
