--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/react-dom": "18.3.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
+    "eslint-plugin-playwright": "2.2.0",
     "postcss": "^8",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.11",
