chore: Update GitHub Actions E2E workflow for Playwright report handling
- Change condition for uploading Playwright report to ensure it uploads regardless of test outcome.
- Reduce retention days for uploaded reports from 5 to 3 for better resource management.

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -37,12 +37,11 @@ jobs:
         run: pnpm exec playwright test
         env:
           BASE_URL: ${{ github.event_name == 'deployment_status' && github.event.deployment_status.environment_url }}
-        continue-on-error: true
 
       - uses: actions/upload-artifact@v4
         name: 🎲 Upload Playwright report
-        if: steps.playwright.outcome == 'success'
+        if: ${{ !cancelled() }}
         with:
           name: playwright-report
           path: playwright-report/
-          retention-days: 5
+          retention-days: 3
