chore: Update Playwright installation command in GitHub Actions workflow
- Specify installation of Chromium and WebKit browsers along with dependencies for enhanced testing capabilities.

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -30,7 +30,7 @@ jobs:
         run: pnpm install
 
       - name: 📦 Install Playwright browser binaries & OS dependencies
-        run: pnpm exec playwright install --with-deps
+        run: pnpm exec playwright install chromium webkit --with-deps
 
       - name: 🎭 Run Playwright tests
         id: playwright
