--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "n2words": "1.21.0",
     "next": "14.2.15",
     "nuqs": "2.1.0",
+    "pdf-parse": "1.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "7.53.1",
@@ -60,6 +61,7 @@
     "@playwright/test": "1.51.0",
     "@types/file-saver": "2.0.7",
     "@types/node": "22.8.1",
+    "@types/pdf-parse": "1.1.4",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
     "eslint": "^8",
