--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "next build",
     "start": "next start",
     "type-check": "tsc --noEmit",
-    "lint": "pnpm eslint .",
+    "lint": "pnpm eslint . --cache",
+    "lint:fix": "pnpm eslint . --fix",
     "prettify": "prettier --write --cache '**/*.{ts?(x),json,js,mjs,yml,yaml,md}'",
     "knip": "knip",
     "update-deps": "pnpm upgrade --interactive --latest",
