--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pdf-invoice-generator",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "pnpm@10.5.0",
+  "packageManager": "pnpm@10.6.5",
   "engines": {
     "node": ">=20.0.0"
   },
@@ -10,11 +10,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
     "type-check": "tsc --noEmit",
+    "lint": "pnpm eslint . --cache",
+    "lint:fix": "pnpm eslint . --fix",
     "prettify": "prettier --write --cache '**/*.{ts?(x),json,js,mjs,yml,yaml,md}'",
+    "knip": "knip",
     "update-deps": "pnpm upgrade --interactive --latest",
-    "dedupe": "pnpm dedupe"
+    "e2e": "pnpm exec playwright test",
+    "e2e:ui": "pnpm exec playwright test --ui",
+    "dedupe": "pnpm dedupe",
+    "lint-stage": "npx lint-staged --verbose",
+    "prepare": "husky"
   },
   "dependencies": {
     "@hookform/resolvers": "3.9.0",
@@ -31,11 +37,13 @@
     "@radix-ui/react-tooltip": "1.1.8",
     "@react-pdf/renderer": "4.3.0",
     "@sentry/nextjs": "9.3.0",
+    "@types/ua-parser-js": "0.7.39",
     "@vercel/speed-insights": "1.2.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "cmdk": "1.0.0",
     "dayjs": "1.11.13",
+    "eslint-plugin-react-hooks": "5.2.0",
     "file-saver": "2.0.5",
     "jszip": "3.10.1",
     "lucide-react": "0.477.0",
@@ -43,26 +51,38 @@
     "n2words": "1.21.0",
     "next": "14.2.15",
     "nuqs": "2.1.0",
+    "pdf-parse": "1.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "7.53.1",
     "sonner": "1.7.4",
     "tailwind-merge": "2.6.0",
     "tailwindcss-animate": "1.0.7",
+    "ua-parser-js": "2.0.3",
     "use-debounce": "10.0.4",
     "zod": "3.24.2"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "3.3.1",
+    "@next/eslint-plugin-next": "15.2.3",
+    "@playwright/test": "1.51.1",
     "@types/file-saver": "2.0.7",
     "@types/node": "22.8.1",
+    "@types/pdf-parse": "1.1.4",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.15",
+    "autoprefixer": "10.4.21",
+    "eslint": "9.23.0",
+    "eslint-config-next": "15.2.3",
+    "eslint-plugin-playwright": "2.2.0",
+    "husky": "9.1.7",
+    "knip": "5.46.0",
+    "lint-staged": "15.5.0",
     "postcss": "^8",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.11",
     "tailwindcss": "3.4.14",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "typescript-eslint": "8.28.0"
   }
 }
