--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lz-string": "1.5.0",
     "n2words": "1.21.0",
     "next": "14.2.15",
+    "next-intl": "4.0.2",
     "nuqs": "2.1.0",
     "pdf-parse": "1.1.1",
     "react": "18.3.1",
