--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "dayjs": "1.11.13",
     "eslint-plugin-react-hooks": "5.2.0",
     "file-saver": "2.0.5",
+    "jiti": "2.4.2",
     "jszip": "3.10.1",
     "lucide-react": "0.477.0",
     "lz-string": "1.5.0",
