feat: enhance localization and add meta tags for About page
- Updated localization files to include a new tagline in multiple languages, improving user experience and consistency.
- Modified the About page to display the tagline dynamically, enhancing the overall layout and responsiveness.
- Added a new script in package.json for checking site metadata, improving development workflow.
- Introduced a new dependency for handling email sending, expanding functionality for future features.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "e2e:ui": "pnpm exec playwright test --ui",
     "dedupe": "pnpm dedupe",
     "lint-stage": "npx lint-staged --verbose",
+    "check-meta": "pnpx check-site-meta",
     "prepare": "husky"
   },
   "dependencies": {
