--- a/package.json
+++ b/package.json
@@ -36,9 +36,13 @@
     "@radix-ui/react-switch": "1.1.3",
     "@radix-ui/react-tabs": "1.1.3",
     "@radix-ui/react-tooltip": "1.1.8",
+    "@react-email/components": "0.0.36",
+    "@react-email/tailwind": "1.0.4",
     "@react-pdf/renderer": "4.3.0",
     "@sentry/nextjs": "9.3.0",
     "@types/ua-parser-js": "0.7.39",
+    "@upstash/ratelimit": "2.0.5",
+    "@upstash/redis": "1.34.6",
     "@vercel/speed-insights": "1.2.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
@@ -57,6 +61,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "7.53.1",
+    "resend": "4.2.0",
     "sonner": "1.7.4",
     "tailwind-merge": "2.6.0",
     "tailwindcss-animate": "1.0.7",
@@ -83,6 +88,7 @@
     "postcss": "^8",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.11",
+    "react-email": "4.0.4",
     "tailwindcss": "3.4.14",
     "typescript": "5.8.2",
     "typescript-eslint": "8.28.0"
