fix: update email development script directory in package.json
- Modified the dev:email script to specify the directory for email templates, ensuring correct path usage during development.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "dedupe": "pnpm dedupe",
     "lint-stage": "npx lint-staged --verbose",
     "check-meta": "pnpx check-site-meta",
-    "dev:email": "email dev",
+    "dev:email": "email dev --dir src/emails",
     "prepare": "husky"
   },
   "dependencies": {
