--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -43,5 +43,5 @@ jobs:
         if: ${{ !cancelled() }}
         with:
           name: playwright-report
-          path: playwright-report/
+          path: playwright-output/report/
           retention-days: 3
