--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -11,11 +11,6 @@ jobs:
     timeout-minutes: 15
     runs-on: ubuntu-latest
     steps:
-      - name: Set job start time
-        id: start-time
-        run: |
-          echo "job_start_time=$(date +%s)" >> "$GITHUB_ENV"
-
       - run: |
           echo "Environment URL - ${{ github.event_name == 'deployment_status' && github.event.deployment_status.environment_url }}"
       # we use pinned versions because there are safer to use: https://x.com/paulmillr/status/1900948425325031448
@@ -35,18 +30,32 @@ jobs:
         run: pnpm install
 
       - name: 📦 Install Playwright browser binaries & OS dependencies
-        run: pnpm exec playwright install chromium webkit --with-deps
+        id: playwright-install
+        run: |
+          start_time=$(date +%s)
+
+          pnpm exec playwright install chromium webkit --with-deps
+
+          end_time=$(date +%s)
+          duration=$((end_time - start_time))
+          minutes=$((duration / 60))
+          seconds=$((duration % 60))
+
+          echo "duration_formatted=${minutes}m ${seconds}s" >> "$GITHUB_OUTPUT"
 
       - name: 🎭 Run Playwright tests
         id: playwright
         # calculate duration of the job and runs playwright test
         run: |
           start_time=$(date +%s)
+
           pnpm exec playwright test
+
           end_time=$(date +%s)
           duration=$((end_time - start_time))
           minutes=$((duration / 60))
           seconds=$((duration % 60))
+
           echo "duration_formatted=${minutes}m ${seconds}s" >> "$GITHUB_OUTPUT"
         env:
           BASE_URL: ${{ github.event_name == 'deployment_status' && github.event.deployment_status.environment_url }}
@@ -59,16 +68,6 @@ jobs:
           name: playwright-report
           path: playwright-output/report/
           retention-days: 3
-
-      - name: Calculate total job duration
-        if: always()
-        id: duration
-        run: |
-          end_time=$(date +%s)
-          duration=$((end_time - $job_start_time))
-          minutes=$((duration / 60))
-          seconds=$((duration % 60))
-          echo "total_duration_formatted=${minutes}m ${seconds}s" >> "$GITHUB_OUTPUT"
 
       - name: 📧 Send email
         if: always()
@@ -85,8 +84,8 @@ jobs:
             E2E tests for ${{ github.repository }} have completed.
 
             Result: ${{ steps.playwright.outcome == 'success' && '✅ Passed' || '❌ Failed' }}
+            Playwright Browser Binaries Installation Time: ${{ steps.playwright-install.outputs.duration_formatted }}
             Playwright Tests Duration: ${{ steps.playwright.outputs.duration_formatted }}
-            Total Job Duration: ${{ steps.duration.outputs.total_duration_formatted }}
 
             For more details, please check the GitHub Actions run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
           attachments: playwright-output/report/index.html
