--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "next-intl": "4.0.2",
     "pdf-parse": "1.1.1",
     "react": "18.3.1",
+    "react-aria-components": "1.8.0",
     "react-dom": "18.3.1",
     "react-hook-form": "7.53.1",
     "react-intersection-observer": "9.16.0",
