--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -85,7 +85,7 @@ jobs:
 
             Result: ${{ steps.playwright.outcome == 'success' && '✅ Passed' || '❌ Failed' }}
             Playwright Browser Binaries Installation Time: ${{ steps.playwright-install.outputs.duration_formatted }}
-            Playwright Tests Duration: ${{ steps.playwright.outputs.duration_formatted }}
+            ${{ steps.playwright.outcome == 'success' && format('Playwright Tests Duration: {0}', steps.playwright.outputs.duration_formatted) }}
 
             For more details, please check the GitHub Actions run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
           attachments: playwright-output/report/index.html
