--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -59,8 +59,8 @@ jobs:
           echo "duration_formatted=${minutes}m ${seconds}s" >> "$GITHUB_OUTPUT"
         env:
           BASE_URL: ${{ github.event_name == 'deployment_status' && github.event.deployment_status.environment_url }}
-          SENTRY_ENABLED: "false" # we don't want to send errors to Sentry in the e2e tests
-          NEXT_PUBLIC_SENTRY_ENABLED: "false" # we don't want to send errors to Sentry in the e2e tests
+          SENTRY_ENABLED: false # we don't want to send errors to Sentry in the e2e tests
+          NEXT_PUBLIC_SENTRY_ENABLED: false # we don't want to send errors to Sentry in the e2e tests
           continue-on-error: true
 
       - uses: actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1 #4.6.1
