chore: update package manager and Playwright timeout settings; enhance Sentry configuration for better environment checks
- Updated package manager version from pnpm@10.6.5 to pnpm@10.9.0 in package.json.
- Increased Playwright expect assertion timeout from 15 seconds to 25 seconds for improved test reliability.
- Refactored Sentry configuration in client, edge, and server files to utilize environment checks for enabling Sentry and DSN management, ensuring better performance and clarity in production environments.

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -45,6 +45,11 @@ jobs:
 
       - name: 🎭 Run Playwright tests
         id: playwright
+        env:
+          BASE_URL: ${{ github.event_name == 'deployment_status' && github.event.deployment_status.environment_url }}
+          SENTRY_ENABLED: false
+          NEXT_PUBLIC_SENTRY_ENABLED: false
+          continue-on-error: true
         # calculate duration of the job and runs playwright test
         run: |
           start_time=$(date +%s)
@@ -57,11 +62,6 @@ jobs:
           seconds=$((duration % 60))
 
           echo "duration_formatted=${minutes}m ${seconds}s" >> "$GITHUB_OUTPUT"
-        env:
-          BASE_URL: ${{ github.event_name == 'deployment_status' && github.event.deployment_status.environment_url }}
-          NEXT_PUBLIC_SENTRY_DSN: ""
-          NEXT_PUBLIC_VERCEL_ENV: "test"
-          continue-on-error: true
 
       - uses: actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1 #4.6.1
         name: 🎲 Upload Playwright report
