--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.11",
     "react-email": "4.0.4",
+    "schema-dts": "1.1.5",
     "tailwindcss": "3.4.14",
     "typescript": "5.8.2",
     "typescript-eslint": "8.28.0"
