--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "crons": [
     {
       "path": "/api/generate-invoice",
-      "schedule": "0 14 8-14 * 1"
+      "schedule": "0 14 10 * *"
     }
   ]
 }
