--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@react-email/tailwind": "1.0.4",
     "@react-pdf/renderer": "4.3.0",
     "@sentry/nextjs": "9.3.0",
+    "@t3-oss/env-nextjs": "0.13.4",
     "@types/ua-parser-js": "0.7.39",
     "@upstash/ratelimit": "2.0.5",
     "@upstash/redis": "1.34.6",
@@ -52,6 +53,7 @@
     "dayjs": "1.11.13",
     "eslint-plugin-react-hooks": "5.2.0",
     "file-saver": "2.0.5",
+    "googleapis": "148.0.0",
     "jiti": "2.4.2",
     "jszip": "3.10.1",
     "lucide-react": "0.477.0",
