chore: update package.json and pnpm-lock.yaml for improved diagnostics and new dependencies
- Enhanced type-check command in package.json to include diagnostics for better TypeScript error reporting.
- Added new command type-check:go for running tsgo with diagnostics.
- Updated pnpm-lock.yaml to reflect changes in package versions and ensure consistent dependency management.
- Updated README.md to improve project description and support message.
- Refactored layout.tsx to include performance monitoring and development tools.
- Improved generate-invoice API route for better notification handling and error logging.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc --noEmit",
+    "type-check": "tsc --noEmit --diagnostics",
+    "type-check:go": "npx tsgo --diagnostics",
     "lint": "pnpm eslint . --cache",
     "lint:fix": "pnpm eslint . --fix",
     "prettify": "prettier --write --cache '**/*.{ts?(x),json,js,mjs,yml,yaml,md}'",
@@ -80,11 +81,13 @@
     "@eslint/eslintrc": "3.3.1",
     "@next/eslint-plugin-next": "15.2.3",
     "@playwright/test": "1.52.0",
+    "@stagewise/toolbar-next": "0.1.2",
     "@types/file-saver": "2.0.7",
     "@types/node": "22.8.1",
     "@types/pdf-parse": "1.1.5",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
+    "@typescript/native-preview": "7.0.0-dev.20250525.1",
     "autoprefixer": "10.4.21",
     "eslint": "9.26.0",
     "eslint-config-next": "15.2.3",
