--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.11",
     "react-email": "4.0.4",
+    "react-scan": "0.3.4",
     "schema-dts": "1.1.5",
     "tailwindcss": "3.4.14",
     "typescript": "5.8.3",
