chore: update Playwright test commands and improve dialog handling in tests
- Modified test commands in package.json and GitHub Actions to use the 'list' reporter for better output readability.
- Enhanced invoice form tests to interact with the dialog component more effectively, ensuring visibility checks are performed on the dialog rather than the page.
- Adjusted layout.tsx to comment out development tools for cleaner production builds.

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -54,7 +54,7 @@ jobs:
         run: |
           start_time=$(date +%s)
 
-          pnpm exec playwright test
+          pnpm exec playwright test --reporter=list
 
           end_time=$(date +%s)
           duration=$((end_time - start_time))
