--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "prettify": "prettier --write --cache '**/*.{ts?(x),json,js,mjs,yml,yaml,md}'",
     "knip": "knip",
     "update-deps": "pnpm upgrade --interactive --latest",
-    "test": "pnpm exec playwright test",
-    "e2e": "pnpm exec playwright test",
+    "test": "pnpm exec playwright test --reporter=list",
+    "e2e": "pnpm exec playwright test --reporter=list",
     "e2e:ui": "pnpm exec playwright test --ui",
     "dedupe": "pnpm dedupe",
     "lint-stage": "npx lint-staged --verbose",
