chore: add tsgo, some dev libs and file structure improvements (#116)
* chore: update package.json and pnpm-lock.yaml for improved diagnostics and new dependencies

- Enhanced type-check command in package.json to include diagnostics for better TypeScript error reporting.
- Added new command type-check:go for running tsgo with diagnostics.
- Updated pnpm-lock.yaml to reflect changes in package versions and ensure consistent dependency management.
- Updated README.md to improve project description and support message.
- Refactored layout.tsx to include performance monitoring and development tools.
- Improved generate-invoice API route for better notification handling and error logging.

* move component folder

* chore: update package.json and pnpm-lock.yaml to include react-scan for performance monitoring

- Added react-scan dependency to package.json for enhanced React component diagnostics.
- Updated pnpm-lock.yaml to reflect the new dependency and ensure consistent package management.
- Modified layout.tsx to conditionally render ReactScan only in development mode, improving performance in production.

* fix: enhance initialization of react-scan component

- Added a useRef hook to prevent multiple initializations of the react-scan tool.
- Implemented error handling during initialization to log failures gracefully.
- Updated useEffect to ensure react-scan is only initialized once, improving performance and reliability.

* chore: update Playwright test commands and improve dialog handling in tests

- Modified test commands in package.json and GitHub Actions to use the 'list' reporter for better output readability.
- Enhanced invoice form tests to interact with the dialog component more effectively, ensuring visibility checks are performed on the dialog rather than the page.
- Adjusted layout.tsx to comment out development tools for cleaner production builds.

--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc --noEmit",
+    "type-check": "tsc --noEmit --diagnostics",
+    "type-check:go": "npx tsgo --diagnostics",
     "lint": "pnpm eslint . --cache",
     "lint:fix": "pnpm eslint . --fix",
     "prettify": "prettier --write --cache '**/*.{ts?(x),json,js,mjs,yml,yaml,md}'",
     "knip": "knip",
     "update-deps": "pnpm upgrade --interactive --latest",
-    "test": "pnpm exec playwright test",
-    "e2e": "pnpm exec playwright test",
+    "test": "pnpm exec playwright test --reporter=list",
+    "e2e": "pnpm exec playwright test --reporter=list",
     "e2e:ui": "pnpm exec playwright test --ui",
     "dedupe": "pnpm dedupe",
     "lint-stage": "npx lint-staged --verbose",
@@ -80,11 +81,13 @@
     "@eslint/eslintrc": "3.3.1",
     "@next/eslint-plugin-next": "15.2.3",
     "@playwright/test": "1.52.0",
+    "@stagewise/toolbar-next": "0.1.2",
     "@types/file-saver": "2.0.7",
     "@types/node": "22.8.1",
     "@types/pdf-parse": "1.1.5",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
+    "@typescript/native-preview": "7.0.0-dev.20250525.1",
     "autoprefixer": "10.4.21",
     "eslint": "9.26.0",
     "eslint-config-next": "15.2.3",
@@ -96,6 +99,7 @@
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.11",
     "react-email": "4.0.4",
+    "react-scan": "0.3.4",
     "schema-dts": "1.1.5",
     "tailwindcss": "3.4.14",
     "typescript": "5.8.3",
