--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "3.9.0",
+    "@mdx-js/loader": "3.1.0",
+    "@mdx-js/react": "3.1.0",
+    "@next/mdx": "15.3.3",
     "@radix-ui/react-accordion": "1.2.3",
     "@radix-ui/react-alert-dialog": "1.1.6",
     "@radix-ui/react-dialog": "1.1.6",
@@ -44,6 +47,8 @@
     "@react-pdf/renderer": "4.3.0",
     "@sentry/nextjs": "9.3.0",
     "@t3-oss/env-nextjs": "0.13.4",
+    "@tailwindcss/typography": "0.5.16",
+    "@types/mdx": "2.0.13",
     "@types/ua-parser-js": "0.7.39",
     "@upstash/ratelimit": "2.0.5",
     "@upstash/redis": "1.34.6",
@@ -69,6 +74,7 @@
     "react-hook-form": "7.53.1",
     "react-intersection-observer": "9.16.0",
     "react-pdf": "9.2.1",
+    "remark-gfm": "4.0.1",
     "resend": "4.2.0",
     "sonner": "1.7.4",
     "tailwind-merge": "2.6.0",
