--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,17 @@
+# run `cp .env.example .env.local`
 
 # for server side
-SENTRY_ENABLED=""
+SENTRY_ENABLED="false"
 # for client side
-NEXT_PUBLIC_SENTRY_ENABLED=""
+NEXT_PUBLIC_SENTRY_ENABLED="false"
 
 NEXT_PUBLIC_SENTRY_DSN=""
 
-# Resend (For emails)
+# Resend (For emails) Create account and paste API keys in .env.local 
 RESEND_API_KEY=""
 RESEND_AUDIENCE_ID=""
 
-# Redis (For subscription tokens)
+# Upstash Redis (For subscription tokens) Create account and paste API keys in .env.local 
 UPSTASH_REDIS_REST_URL=""
 UPSTASH_REDIS_REST_TOKEN=""
 
@@ -42,6 +43,6 @@ TELEGRAM_BOT_TOKEN=""
 TELEGRAM_CHAT_ID=""
 
 # Google drive api
-GOOGLE_DRIVE_CLIENT_EMAIL=""
+GOOGLE_DRIVE_CLIENT_EMAIL="example@mail.com"
 GOOGLE_DRIVE_PRIVATE_KEY=""
 GOOGLE_DRIVE_PARENT_FOLDER_ID=""
