--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "lint-stage": "npx lint-staged --verbose",
     "check-meta": "pnpx check-site-meta",
     "dev:email": "email dev --dir src/emails",
-    "prepare": "husky"
+    "prepare": "husky",
+    "expose-to-internet": "pnpm dlx localtunnel --port 3000"
   },
   "dependencies": {
     "@hookform/resolvers": "3.9.0",
