chore: migrate to tailwind v4

--- a/package.json
+++ b/package.json
@@ -89,13 +89,13 @@
     "@next/eslint-plugin-next": "15.2.3",
     "@playwright/test": "1.52.0",
     "@stagewise/toolbar-next": "0.1.2",
+    "@tailwindcss/postcss": "4.1.11",
     "@types/file-saver": "2.0.7",
     "@types/node": "22.8.1",
     "@types/pdf-parse": "1.1.5",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
     "@typescript/native-preview": "7.0.0-dev.20250525.1",
-    "autoprefixer": "10.4.21",
     "eslint": "9.26.0",
     "eslint-config-next": "15.2.3",
     "eslint-plugin-playwright": "2.2.0",
@@ -105,11 +105,11 @@
     "lint-staged": "15.5.0",
     "postcss": "^8",
     "prettier": "3.5.3",
-    "prettier-plugin-tailwindcss": "0.6.11",
+    "prettier-plugin-tailwindcss": "0.6.14",
     "react-email": "4.0.4",
     "react-scan": "0.3.4",
     "schema-dts": "1.1.5",
-    "tailwindcss": "3.4.14",
+    "tailwindcss": "4.1.11",
     "typescript": "5.8.3",
     "typescript-eslint": "8.32.0"
   }
