feat: add eslint-plugin-better-tailwindcss

--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "sonner": "1.7.4",
     "tailwind-merge": "2.6.0",
     "tailwindcss-animate": "1.0.7",
+    "tw-animate-css": "1.3.5",
     "ua-parser-js": "2.0.3",
     "use-debounce": "10.0.4",
     "zod": "3.24.4"
@@ -95,13 +96,16 @@
     "@types/pdf-parse": "1.1.5",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
+    "@typescript-eslint/parser": "8.38.0",
     "@typescript/native-preview": "7.0.0-dev.20250525.1",
+    "autoprefixer": "10.4.21",
     "eslint": "9.26.0",
-    "eslint-config-next": "15.2.3",
+    "eslint-config-next": "15.4.3",
+    "eslint-plugin-better-tailwindcss": "3.7.1",
     "eslint-plugin-playwright": "2.2.0",
     "eslint-plugin-react-you-might-not-need-an-effect": "0.0.39",
     "husky": "9.1.7",
-    "knip": "5.55.1",
+    "knip": "5.62.0",
     "lint-staged": "15.5.0",
     "postcss": "^8",
     "prettier": "3.5.3",
