--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@hookform/resolvers": "3.9.0",
     "@mdx-js/loader": "3.1.0",
     "@mdx-js/react": "3.1.0",
+    "@microlink/react-json-view": "1.27.0",
     "@next/mdx": "15.3.3",
     "@radix-ui/react-accordion": "1.2.3",
     "@radix-ui/react-alert-dialog": "1.1.6",
