--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pdf-invoice-generator",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "pnpm@10.9.0",
+  "packageManager": "pnpm@10.14.0",
   "engines": {
     "node": ">=20.0.0"
   },
@@ -17,7 +17,8 @@
     "prettify": "prettier --write --cache '**/*.{ts?(x),json,js,mjs,yml,yaml,md}'",
     "knip": "knip",
     "update-deps": "pnpm upgrade --interactive --latest",
-    "test": "pnpm exec playwright test --reporter=list",
+    "vitest": "vitest --reporter=verbose",
+    "vitest:ui": "vitest --ui",
     "e2e": "pnpm exec playwright test --reporter=list",
     "e2e:ui": "pnpm exec playwright test --ui",
     "dedupe": "pnpm dedupe",
@@ -95,7 +96,7 @@
     "@types/pdf-parse": "1.1.5",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
-    "@typescript/native-preview": "7.0.0-dev.20250525.1",
+    "@typescript/native-preview": "7.0.0-dev.20250810.1",
     "autoprefixer": "10.4.21",
     "eslint": "9.26.0",
     "eslint-config-next": "15.2.3",
@@ -111,7 +112,8 @@
     "react-scan": "0.3.4",
     "schema-dts": "1.1.5",
     "tailwindcss": "3.4.14",
-    "typescript": "5.8.3",
-    "typescript-eslint": "8.32.0"
+    "typescript": "5.9.2",
+    "typescript-eslint": "8.39.0",
+    "vitest": "3.2.4"
   }
 }
