--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "react-email": "4.0.4",
     "react-scan": "0.3.4",
     "schema-dts": "1.1.5",
+    "shadcn": "3.2.1",
     "tailwindcss": "3.4.14",
     "typescript": "5.9.2",
     "typescript-eslint": "8.40.0",
