chore: styles fixes, pin pnpm in pkg.json, minor improvements
* upgrade pnpm to version 10.17.0 and adjust package manager string in package.json
* add minimum release age setting in .npmrc to enhance security
* modify update-deps script to include minimum release age configuration
* update Tailwind CSS heartbeat animation delay for improved UX
* add CSS validation setting in VSCode configuration
* enhance local storage view button accessibility with screen reader text
* adjust layout and styling in about page for better responsiveness
* refactor project logo description component to use semantic HTML elements

--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,5 @@
 save-exact=true
+
+# this specifies the number of minutes that must pass after a version is published before pnpm will install it (to prevent supply chain attacks)
+# https://pnpm.io/settings#minimumreleaseage
+minimumReleaseAge=4320 # 3 days, 
