feat: add typescript-plugin-directives and update configurations
* add typescript-plugin-directives to package.json
* include typescript-plugin-directives in tsconfig.json plugins
* update README.md to reference typescript-plugin-directives
* enhance VSCode settings for TypeScript inlay hints

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
-  "css.validate": false
+  "css.validate": false,
+  "editor.inlayHints.enabled": "on",
+  "typescript.inlayHints.parameterNames.enabled": "all"
 }
