--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "tailwindcss": "3.4.14",
     "typescript": "5.9.3",
     "typescript-eslint": "8.40.0",
+    "typescript-plugin-directives": "0.0.3",
     "vitest": "3.2.4"
   }
 }
