chore: update README and .env.example for clarity and new features
* Revised README.md to enhance project description, add links, and improve feature presentation.
* Updated .env.example comments for better understanding of invoice generation functionality.
* Added new screenshots for default and Stripe templates, while removing outdated images.
* Enhanced localization files with HTML span tags for better styling in descriptions across multiple languages.

--- a/.env.example
+++ b/.env.example
@@ -21,7 +21,7 @@ UPSTASH_REDIS_REST_TOKEN=""
 # Used for /api
 AUTH_TOKEN=""
 
-# Personal Info for sending Invoice via Email
+# Personal Info for sending invoice automatically, check /api/generate-invoice
 
 # Sellet Info
 SELLER_NAME="Adam Smith"
