--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "clsx": "2.1.1",
     "cmdk": "1.0.0",
     "dayjs": "1.11.13",
+    "dotenv": "17.2.3",
     "eslint-plugin-react-hooks": "5.2.0",
     "file-saver": "2.0.5",
     "googleapis": "148.0.0",
