feat: implement customizable Tax Number label in invoice forms
* Added support for a customizable Tax Number label in the buyer and seller information sections.
* Updated related components, forms, and validation schemas to accommodate the new label functionality.
* Refactored existing tests to ensure proper handling of the Tax Number label in various scenarios.
* Enhanced user interface to allow users to set and display custom labels for Tax Number in the invoice PDF templates.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,12 @@
     "plugins": [
       {
         "name": "next"
-      },
-      {
-        "name": "typescript-plugin-directives"
       }
+      // this breaks autoimports/intellisense in VS Code now https://github.com/lazarv/typescript-plugin-directives/issues/2
+      // TODO: reinstall this package when the issue is fixed `pnpm -D typescript-plugin-directives`
+      // {
+      //   "name": "typescript-plugin-directives"
+      // },
     ],
     "paths": {
       "@/*": ["./src/*"]
