--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vitest:ui": "vitest --ui",
     "e2e": "pnpm exec playwright test --reporter=list",
     "e2e:ui": "pnpm exec playwright test --ui",
+    "e2e:not-flaky": "pnpm e2e --workers=2",
     "dedupe": "pnpm dedupe",
     "lint-stage": "npx lint-staged --verbose",
     "check-meta": "pnpx check-site-meta",
