chore: update e2e tests and Playwright configuration
* Updated Playwright configuration to use iPhone 13 Pro for mobile testing.
* Removed outdated About page snapshot tests and their associated images.
* Enhanced PDF rendering in invoice tests by implementing a new utility function for canvas rendering.
* Adjusted screenshot assertions to ensure consistency across different templates and locales.
* Updated GitHub Actions workflow to run tests on Ubuntu for improved compatibility.

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -9,8 +9,7 @@ jobs:
 
     name: Run e2e tests via ${{ github.event_name == 'deployment_status' && 'Vercel deployment' }}
     timeout-minutes: 35
-    # IMPORTANT: we use "macos-14" (my local machine is running macOS 14) due to the playwright snapshot updates issues on mac os vs linux (locally I use macos to generate snapshots and it's required to have the same OS for the CI)
-    runs-on: macos-14
+    runs-on: ubuntu-latest
     steps:
       - run: |
           echo "Environment URL - ${{ github.event_name == 'deployment_status' && github.event.deployment_status.environment_url }}"
