chore: update e2e workflow and PDF rendering imports
* Changed GitHub Actions workflow to run on macOS-latest for consistency with local environment.
* Updated PDF.js imports to use a specific version from CDN for improved stability and reliability in rendering.

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -9,7 +9,8 @@ jobs:
 
     name: Run e2e tests via ${{ github.event_name == 'deployment_status' && 'Vercel deployment' }}
     timeout-minutes: 35
-    runs-on: ubuntu-latest
+    # we use macos-latest because I am using mac os locally and generating snapshots (screenshots) for the PDF tests locally, so we need to use the same OS on the CI
+    runs-on: macos-latest
     steps:
       - run: |
           echo "Environment URL - ${{ github.event_name == 'deployment_status' && github.event.deployment_status.environment_url }}"
