--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@t3-oss/env-nextjs": "0.13.4",
     "@tailwindcss/typography": "0.5.16",
     "@types/mdx": "2.0.13",
+    "@types/qrcode": "1.5.6",
     "@types/ua-parser-js": "0.7.39",
     "@upstash/ratelimit": "2.0.5",
     "@upstash/redis": "1.34.6",
@@ -74,7 +75,7 @@
     "n2words": "1.21.0",
     "next": "14.2.15",
     "next-intl": "4.0.2",
-    "pdf-parse": "1.1.1",
+    "qrcode": "1.5.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "7.53.1",
@@ -95,10 +96,9 @@
     "@playwright/test": "1.56.1",
     "@types/file-saver": "2.0.7",
     "@types/node": "22.8.1",
-    "@types/pdf-parse": "1.1.5",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
-    "@typescript/native-preview": "7.0.0-dev.20250819.1",
+    "@typescript/native-preview": "7.0.0-dev.20260113.1",
     "autoprefixer": "10.4.21",
     "dotenv": "17.2.3",
     "eslint": "9.33.0",
