feat: reworked app logic, improved multi-page pdf layout, add/update e2e tests, improvements and bug fixes
* Enhanced README.md with new features, including multi-page PDF support, QR code functionality, and live preview demos.
* Added demo GIFs to showcase new features and improve user understanding.
* Updated key features section for clarity and added a news & updates section for version tracking.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "check-meta": "pnpx check-site-meta",
     "dev:email": "email dev --dir src/emails",
     "prepare": "husky",
-    "expose-to-internet": "pnpm dlx localtunnel --port 3000",
+    "expose-to-internet": "pnpm dlx cloudflared tunnel --url http://localhost:3000",
     "corepack:enable": "corepack enable",
     "corepack:prepare": "corepack prepare pnpm@latest"
   },
