feat: Improved handling of invoice sharing logic to differentiate between mobile and desktop sharing methods, enhancing user experience.
* Added a new command in package.json for running cloudflared tunnel.
* Updated tests to verify the visibility of the share invoice link description toast.
* Refined toast notifications in the AppPageClient to include new IDs for better tracking and user feedback.
* Improved handling of invoice sharing logic to differentiate between mobile and desktop sharing methods, enhancing user experience.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dev:email": "email dev --dir src/emails",
     "prepare": "husky",
     "expose-to-internet": "pnpm dlx cloudflared tunnel --url http://localhost:3000",
+    "cloudflared:tunnel": "pnpm dlx cloudflared tunnel run easy-invoice-pdf-local-dev",
     "corepack:enable": "corepack enable",
     "corepack:prepare": "corepack prepare pnpm@latest"
   },
