--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: 🧪 Vitest Unit Tests
+name: 🧹 ESLint
 on:
   push:
     branches: [main]
@@ -6,9 +6,9 @@ on:
     branches: [main]
 
 jobs:
-  unit-tests:
-    name: Run unit tests
-    timeout-minutes: 10
+  lint:
+    name: Run linting
+    timeout-minutes: 5
     runs-on: ubuntu-latest
     steps:
       # we use pinned versions because there are safer to use: https://x.com/paulmillr/status/1900948425325031448
@@ -27,9 +27,8 @@ jobs:
       - name: 🚚 Install dependencies
         run: pnpm install
 
-      - name: 🧪 Run Vitest tests
-        id: vitest
-        run: pnpm vitest run --reporter=verbose
+      - name: 🔎 Run linting
+        run: pnpm eslint .
 
       - name: 🔍 Get PR URL
         if: failure()
@@ -54,9 +53,9 @@ jobs:
           to: ${{ secrets.EMAIL_USERNAME }}
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
-          subject: ❌ Unit Tests Failed for ${{ github.repository }}
+          subject: ❌ Linting Failed for ${{ github.repository }}
           body: |
-            Unit tests for ${{ github.repository }} have failed.
+            Linting for ${{ github.repository }} has failed.
 
             Branch: ${{ github.ref_name }}
             Commit: ${{ github.sha }}
